[gd_scene load_steps=2 format=3 uid="uid://gfjvd358j1j5"]

[ext_resource type="Script" uid="uid://bg1adwvigpcsn" path="res://addons/TweenSuite/TweenAnimationEditor/TweenAnimationEditor.gd" id="1_r8si7"]

[node name="TweenAnimationEditor" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r8si7")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StepContainer" type="HBoxContainer" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="AddStep" type="Button" parent="HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Add Step"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="pressed" from="HBoxContainer2/MarginContainer/AddStep" to="." method="add_animation_step"]
[connection signal="timeout" from="Timer" to="." method="push_data"]
